# EdgeDetectRND

./: .gitignore  README.md  build.gradle  local.properties  package-lock.json  package.json  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/edgedetectrnd/: CameraRenderer.java  GLTextureRenderer.java  MainActivity.java  NativeBridge.java  NativeLib.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml
gl/shaders/: fragment.glsl  vertex.glsl
jni/: CMakeLists.txt  native-lib.cpp
web/: index.html  main.js  main.js.map  main.ts  package-lock.json  package.json  style.css  tsconfig.json
web/src/: index.js  index.js.map  index.ts  viewer.d.ts  viewer.d.ts.map  viewer.js  viewer.js.map  viewer.ts
